refactor: 코드리뷰 반영
- 포인트 충전 로직 통합